# todoist-command-line-tool

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt  trial_ground.py
todoistcli/: todo.py
